--- a/style.css
+++ b/style.css
@@ -11,32 +11,66 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-family:arial, sans-serif;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  font-family:arial, sans-serif;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #1b109e;
   color: white;
+  font-family:arial, sans-serif;
 }
 
 /* Changes text colour to light purple */
 .lightPurple{
-  color:#cbaaf2;
+  color:#530b96;
 }
 
 /* Changes the colour and font of the header */
 .header{
-  font-family:ariel, sans-serif;
-  color:#f5a4e9;
+  font-family:arial, sans-serif;
+  color:#8187db;
 }
 
-/* Changes font */
-.text{
-  font-family:ariel, sans-serif;
+/* Makes sure the image fits the screen it's on */
+img{
+  width:100px;
+}
+
+.hero{
+  border:4px solid #1b0101;
+  background-image: linear-gradient(#c0c0c0,#808080);
+  position: static;
+  left: 8vw;
+  right: 8vw;
+  display: inline-block;
+  padding: 10px;
+}
+
+.bline {
+  text-align: right;
+}
+
+button {
+  border-radius: 4px;
+  border: 1px solid #BBBBBB;
+  margin: 4px 2px;
+  background: radial-gradient(#FFFFFF, #dbdbdb);
+  box-shadow: inset 0px -1px #c9c9c9;
+  color: #2a2a2a;
+  padding: 2px;
+  display: inline-block;
+}
+
+.b:before {
+  content: "Youtube";
+  padding: 8px 10px;
+  font-size: .95em;
 }
