--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Background for navigation bar */
 .topnav {
-  background-color: #333;
+  background-image: linear-gradient(#061c40,black);
   overflow: hidden;
 }
 
@@ -24,14 +24,16 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #1b109e;
+  background:linear-gradient(#5d84c2,#5d64c2);
   color: white;
   font-family:arial, sans-serif;
 }
 
-/* Changes text colour to light purple */
+/* Western text */
 .lightPurple{
   color:#530b96;
+  font-weight:strong;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Changes the colour and font of the header */
@@ -78,4 +80,23 @@ button {
   content: "Youtube";
   padding: 8px 10px;
   font-size: .95em;
+}
+
+/* Formatting about section*/
+.text{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+/* Background colour */
+body{
+  background-image: linear-gradient(#faf9f0,#faf8e6);
+}
+
+/* Decoration for header */
+.title{
+  background:linear-gradient(#5d84c2,#5d64c2);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  font-weight:bold;
+  word-wrap: break-word;
 }
